# NexaCustomize

./: BRANDING.md  CHANGELOG.md  README.md  REBRANDING_SUMMARY.md  fix_id.sh  install.sh  meson.build  nexusfoundation.nexaos.customize.json  org.nexuspenn.nexaos.customize.json  org.nexuspenn.nexaos.customize.yml  run.sh
data/: meson.build  nexusfoundation.nexaos.customize.appdata.xml.in  nexusfoundation.nexaos.customize.desktop.in  nexusfoundation.nexaos.customize.gschema.xml  org.nexuspenn.nexaos.customize.appdata.xml.in
data/icons/: meson.build
po/: POTFILES
src/: branding.py  main.py  meson.build  nexacustomize.gresource.xml  nexacustomize.in  style.css  theming.ui  window.py  window.ui
